--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 .navbar-menu li {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .navbar-menu li a {
@@ -43,5 +43,24 @@ body {
 }
 
 .navbar-menu li a:hover {
-    color: #ff9900; 
+    color: #ff9900;
+}
+
+/* Responsive Styles */
+
+@media screen and (max-width: 768px) {
+    .navbar-brand h1 {
+        font-size: 20px;
+        margin-left: 10px;
+    }
+    
+    .navbar-menu {
+        float: none;
+        text-align: center;
+    }
+    
+    .navbar-menu li {
+        display: block;
+        margin: 10px 0;
+    }
 }
