--- a/style.css
+++ b/style.css
@@ -180,6 +180,35 @@ body {
     margin-right: 0;
 }
 
+/* Styling for the Footer */
+footer {
+    font-size: 14px;
+}
+
+footer h4 {
+    margin-bottom: 20px;
+}
+
+footer p {
+    margin-bottom: 5px;
+}
+
+footer .social-links a {
+    display: inline-block;
+    font-size: 24px;
+    margin-right: 15px;
+    color: #666666;
+}
+
+footer .social-links a:last-child {
+    margin-right: 0;
+}
+
+footer p:last-child {
+    margin-bottom: 0;
+}
+
+
 /* Responsive Styles */
 
 @media screen and (max-width: 768px) {
