--- a/style.css
+++ b/style.css
@@ -49,7 +49,10 @@ body {
 }
 
 /* Home Section Styles */
-#home {
+ #home {
+    background-image: url("images/diamond.jpg");
+    background-size: cover;
+    background-position: center;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -70,7 +73,8 @@ body {
 
 #home .btn {
     border-radius: 30px;
-}
+} 
+
 
 /* Styling for the About Section */
 #about img {
